--- a/.github/workflows/docker-image-dev.yml
+++ b/.github/workflows/docker-image-dev.yml
@@ -15,12 +15,12 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Check HOST
-      run: echo '${{ secrets.HOST }}'
+      run: echo ${{ secrets.HOST_DEV }}
 
     - name: executing remote ssh commands using password
       uses: appleboy/ssh-action@v1.0.3
       with:
-        host: ${{ secrets.HOST }}
+        host: ${{ secrets.HOST_DEV }}
         username: ${{ secrets.SSH_USER }}
         password: ${{ secrets.SSH_PASSWORD }}
         port: 22
