--- a/.github/workflows/docker-image-dev.yml
+++ b/.github/workflows/docker-image-dev.yml
@@ -24,4 +24,5 @@ jobs:
         script: |
           cd ${{ secrets.PATH }}
           ls -al
+          git pull origin develop
           docker compose --env-file .env up --build -d
